[metadata]
name = bco_dl
version = 0.1.1
author = Leif Denby
author_email = leif@denby.eu
description = Simple download interface for Barbados Cloud Observatory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/regridcart

[options]
packages=find:
install_requires =
    xarray
    netcdf4
    ftpretty

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
dev =
  pre-commit
  %(test)s
  ipython

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black
